Add a fallback to Herokus SOURCE_VERSION.